By TravisCarden: Fixed broken CSS selector.

--- a/checklistapi.css
+++ b/checklistapi.css
@@ -1,4 +1,4 @@
 
-#checklistapi-form div.description p {
+#checklistapi-checklist-form div.description p {
   margin: .5em 0;
 }
